--- a/SCSS/scss/style.scss
+++ b/SCSS/scss/style.scss
@@ -1,8 +1,9 @@
 
 @import '_variables.scss';
+@import '_mixins.scss';
 
 
-body {
+.wrapper {
   background-color: $background-color;
   margin:0;
   padding: 0;
@@ -10,8 +11,7 @@ body {
       color: $text-color;
       h1 {
         color: $text-color;
+        @include first;
       }
     }
-  
-  
 }
