--- a/SCSS/scss/_variables.scss
+++ b/SCSS/scss/_variables.scss
@@ -1,7 +1,14 @@
 
 
+//===================== COLORS
+$body-color: #00091017;
+$background-color: #00091004;
+$border-color: #000910b6;
+$text-color: #dbdfe2;
+$header-color: #c44536;
+$box-shadow-color: #00091044;
 
-$text-color: rgb(228, 86, 10);
-$background-color: rgb(114, 118, 90);
-$font-size: 81%;
-$header-color: rgb(97, 68, 50)
+
+// ===================FONT-SIZES
+$text-font: 81%;
+$header-font: 120%;
