--- a/SCSS/scss/_variables.scss
+++ b/SCSS/scss/_variables.scss
@@ -4,11 +4,15 @@
 $body-color: #00091017;
 $background-color: #00091004;
 $border-color: #000910b6;
-$text-color: #dbdfe2;
-$header-color: #c44536;
+$text-color: #000910ce;
+$button-color: #c44536;
 $box-shadow-color: #00091044;
 
 
 // ===================FONT-SIZES
-$text-font: 81%;
+$text-font: 91%;
 $header-font: 120%;
+
+// ===================FONT_FAMILY
+$text-font-family: Arial, Helvetica, sans-serif;
+$header-font-family: 'Courier New', Courier, monospace
