--- a/SCSS/css/style.css
+++ b/SCSS/css/style.css
@@ -3,7 +3,6 @@ body {
   padding: 0;
   border: 0;
   width: 100%;
-  height: 100vh;
   background-color: #00091017; }
 
 input {
@@ -13,14 +12,19 @@ input {
 
 .wrapper {
   max-width: 1000px;
-  margin: 10% auto;
+  margin: 10% auto 0;
+  padding: 5%;
+  border: 1px solid red;
   height: 300px;
+  color: #000910ce;
+  font-size: 91%;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: row;
   align-items: center;
   text-align: none; }
   .wrapper .intro {
-    flex: 3;
+    flex: 4;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -30,7 +34,15 @@ input {
     width: 0;
     height: 100%;
     margin: 5%; }
-  .wrapper .card {
-    flex: 2;
+  .wrapper .signup .card {
+    width: 100%;
+    height: 100%;
+    margin: 5%;
+    flex: 3;
     box-shadow: 5px 5px 8px 1px #00091044;
     background-color: #00091004; }
+
+button {
+  color: #f1f5f8;
+  background-color: #c44536;
+  border-radius: 5px; }
