--- a/SCSS/scss/style.scss
+++ b/SCSS/scss/style.scss
@@ -5,7 +5,6 @@
 body {
   @include margin-padding-border(0, 0, 0);
   width: 100%;
-  height: 100vh;
   background-color: $body-color;
 }
 input {
@@ -13,20 +12,38 @@ input {
 }
 .wrapper {
   max-width: 1000px;
-  margin: 10% auto;
+  @include margin-padding-border(10% auto 0, 5%, 1px solid red);
   height: 300px;
+  color: $text-color;
+  font-size: $text-font;
+  font-family: $text-font-family;
   @include display($direction: row, $text-align: none);
   .intro {
-    flex: 3;
-    @include display($direction: row, $text-align: center);
+    flex: 4;
+    @include display($direction: row,$text-align: center);
   }
   .line {
     border: 1px solid $border-color;
-    @include width-height($width: 0, $height: 100%, $margin: 5%);
+    @include width-height-margin(0, 100%, 5%);
   }
-  .card{
-    flex: 2;
-    @include box-shadow;
-    background-color: $background-color;
+  .signup {
+    .card{
+      @include width-height-margin(100%, 100%, 5%);
+      // @include margin-padding-border(0 ,10%, 0);
+      flex: 3;
+      @include box-shadow;
+      background-color: $background-color;
+      }
+    }
   }
-}
+  button {
+    @include button;
+    // @include margin-padding-border(0 0 0 85%, 5px, 0);
+  }
+
+  @media all and (max-width: 800px) {
+    .wrapper {
+
+      // @include display($direction: column, $text-align: none);
+    }
+  }
