--- a/SCSS/scss/partials/_variables.scss
+++ b/SCSS/scss/partials/_variables.scss
@@ -14,5 +14,5 @@ $text-font: 91%;
 $header-font: 120%;
 
 // ===================FONT_FAMILY
-$text-font-family: Arial, Helvetica, sans-serif;
-$header-font-family: 'Courier New', Courier, monospace
+$text-font-family: "Tangerine",Arial, Helvetica, sans-serif;
+$header-font-family: "Inconsolata",'Courier New', Courier, monospace,'Courier New', Courier, monospace
