--- a/SCSS/scss/partials/_mixins.scss
+++ b/SCSS/scss/partials/_mixins.scss
@@ -1,9 +1,12 @@
 
 
-@mixin first {
-  background-color: $header-color;
-  border-color: $header-color;
+
+
+@mixin google-font($font) {
+  $font: unquote($font);
+  @import url("https://fonts.googleapis.com/css?family=#{$font}");
 }
+
 
 @mixin button {
   color: #f1f5f8;
@@ -26,10 +29,9 @@
   text-align: $text-align;
 }
 
-@mixin width-height-margin($width, $height, $margin) {
+@mixin width-height($width, $height) {
   width: $width;
   height: $height;
-  margin: $margin;
 }
 
 @mixin margin-padding-border($margin, $padding, $border) {
@@ -37,3 +39,18 @@
   padding: $padding;
   border: $border;
 }
+
+  @keyframes displayName {
+      0% {
+        transform: translateY(0px);
+        opacity: 0;
+      }
+      50% {
+        opacity: .5;
+        transform: translateY(-35px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(-35px);
+      }
+    }
