--- a/SCSS/scss/partials/_variables.scss
+++ b/SCSS/scss/partials/_variables.scss
@@ -15,4 +15,5 @@ $header-font: 120%;
 
 // ===================FONT_FAMILY
 $text-font-family: "Tangerine",Arial, Helvetica, sans-serif;
-$header-font-family: "Inconsolata",'Courier New', Courier, monospace,'Courier New', Courier, monospace
+$header-font-family: "shadow-multiple","3d","Inconsolata",'Courier New', Courier, monospace,'Courier New', Courier, monospace;
+
