--- a/SCSS/scss/partials/_mixins.scss
+++ b/SCSS/scss/partials/_mixins.scss
@@ -4,7 +4,8 @@
 
 @mixin google-font($font) {
   $font: unquote($font);
-  @import url("https://fonts.googleapis.com/css?family=#{$font}");
+  // @import url(https://fonts.googleapis.com/css?family=#{$font});
+  @import url(https://fonts.googleapis.com/css?family=Rancho&effect=#{$font});
 }
 
 
