--- a/SCSS/css/style.css
+++ b/SCSS/css/style.css
@@ -1,5 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Rancho&effect=Tangerine);
-@import url(https://fonts.googleapis.com/css?family=Rancho&effect=Inconsolata);
+@import url(https://fonts.googleapis.com/css?family=Tangerine);
+@import url(https://fonts.googleapis.com/css?family=Inconsolata);
+@import url(https://fonts.googleapis.com/css?family=anaglyph);
 @import url(https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple);
 @keyframes displayName {
   0% {
@@ -40,7 +41,7 @@ input {
   height: 300px;
   color: #000910ce;
   font-size: 91%;
-  font-family: "Tangerine", Arial, Helvetica, sans-serif;
+  font-family: "Inconsolata", "Tangerine", "Inconsolata", "anaglyph", Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,10 +52,10 @@ input {
     margin: 2%;
     padding: 5%;
     border: 0;
-    box-shadow: 5px 5px 8px 1px #00091044;
+    box-shadow: 5px 5px 8px 1px #00091027;
     background-color: #00091004; }
     .wrapper .card h2 {
-      font-family: "shadow-multiple", "3d", "Inconsolata", "Courier New", Courier, monospace, "Courier New", Courier, monospace;
+      font-family: "Rancho&effect=shadow-multiple", "3d", "Inconsolata", "Courier New", Courier, monospace, "Courier New", Courier, monospace;
       text-align: center; }
     .wrapper .card .name, .wrapper .card .password {
       margin: 0 0 -20px 5px;
@@ -65,11 +66,17 @@ input {
       margin: 10% 0; }
     .wrapper .card .display {
       animation: displayName .5s linear forwards; }
+  .wrapper .card:hover {
+    box-shadow: 5px 5px 14px 5px #00091027; }
 
 button {
   color: #f1f5f8;
-  background-color: #c44536;
+  background-color: #c44436cb;
   border-radius: 5px;
   margin: 0;
   padding: 5px;
-  border: 0; }
+  border: 0;
+  font-family: "Inconsolata", "Tangerine", "Inconsolata", "anaglyph", Arial, Helvetica, sans-serif; }
+
+button:hover {
+  background: #c44436; }
