--- a/SCSS/scss/partials/_variables.scss
+++ b/SCSS/scss/partials/_variables.scss
@@ -19,4 +19,4 @@ $header-font: 120%;
 
 // ===================FONT_FAMILY
 $text-font-family: "Inconsolata","Tangerine","Inconsolata", "anaglyph",Arial, Helvetica, sans-serif;
-$header-font-family: "Rancho&effect=shadow-multiple","3d","Inconsolata",'Courier New', Courier, monospace,'Courier New', Courier, monospace;
+$header-font-family: "Rancho&effect=shadow-multiple","3d","Tangerine","Inconsolata",'Courier New', Courier, monospace,'Courier New', Courier, monospace;
