--- a/SCSS/scss/style.scss
+++ b/SCSS/scss/style.scss
@@ -26,7 +26,6 @@ input {
   @include border-radius;
   color: black;
 }
-// input:focus
 ::-moz-placeholder {color: transparent;}
 .wrapper {
   max-width: 1000px;
@@ -64,7 +63,7 @@ input {
 
 button {
   @include button;
-  @include margin-padding-border(0 , 5px, 0);
+  @include margin-padding-border(5% 0 0 0 , 5px, 0);
   font-family: $text-font-family;
 }
 button:hover {
