--- a/SCSS/css/style.css
+++ b/SCSS/css/style.css
@@ -62,7 +62,7 @@ input {
     background-color: #00091004; }
     .wrapper .card .signUp {
       flex: 1;
-      font-family: "Rancho&effect=shadow-multiple", "3d", "Inconsolata", "Courier New", Courier, monospace, "Courier New", Courier, monospace;
+      font-family: "Rancho&effect=shadow-multiple", "3d", "Tangerine", "Inconsolata", "Courier New", Courier, monospace, "Courier New", Courier, monospace;
       text-align: center; }
     .wrapper .card .data {
       width: 100%;
@@ -85,7 +85,7 @@ button {
   color: #f1f5f8;
   background-color: #c44436cb;
   border-radius: 5px;
-  margin: 0;
+  margin: 5% 0 0 0;
   padding: 5px;
   border: 0;
   font-family: "Inconsolata", "Tangerine", "Inconsolata", "anaglyph", Arial, Helvetica, sans-serif; }
