removed the javascript and trying to add css functionality

--- a/SCSS/css/style.css
+++ b/SCSS/css/style.css
@@ -25,7 +25,7 @@ body {
   align-items: center; }
 
 input {
-  margin: 0px 0 0 0px;
+  margin: 0px 0 0% 0px;
   padding: 0 0 0 7px;
   border: 0;
   background-color: transparent;
@@ -33,9 +33,6 @@ input {
   width: 95%;
   border-radius: 5px;
   color: black; }
-
-::-moz-placeholder {
-  color: transparent; }
 
 .wrapper {
   max-width: 1000px;
@@ -70,14 +67,17 @@ input {
       display: flex;
       flex-direction: column; }
     .wrapper .card .name, .wrapper .card .password {
-      margin: 0 0 -20px 5px;
+      margin: 0 0 25px 5px;
       padding: 0;
       border: 0;
-      color: #000910ce; }
+      color: #000910ce;
+      position: absolute; }
+    .wrapper .card input:focus + .name {
+      top: 0.88em;
+      border-bottom: 1px solid yellow; }
     .wrapper .card .nameInput {
-      margin: 10% 0; }
-    .wrapper .card .display {
-      animation: displayName .5s linear forwards; }
+      margin: 10% 0;
+      position: relative; }
   .wrapper .card:hover {
     box-shadow: 5px 5px 14px 5px #00091027; }
 
