--- a/SCSS/scss/partials/_mixins.scss
+++ b/SCSS/scss/partials/_mixins.scss
@@ -11,7 +11,10 @@
 @mixin button {
   color: #f1f5f8;
   background-color: $button-color;
-  @include border-radius
+  @include border-radius;
+  &:hover {
+    // background-color: lighten($button-color, 20%)
+  }
 }
 
 
